--- a/webapp/front/front/src/app/features/admin/admin-amenity-edit-page/admin-amenity-edit-page.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-amenity-edit-page/admin-amenity-edit-page.component.html
@@ -26,7 +26,7 @@
             <div class="divider"></div>
 
             <!-- Action buttons -->
-            <div class="f-r-sb-c w-100 pl-3 pr-3">
+            <div class="f-r-sb-c w-100 ps-3 pr-3">
                 <a (click)="check9to5()" class="w-100 cool-button cool-small on-bg">9-17</a>
                 <a (click)="uncheckWeekends()" class="w-100 cool-button red">Clear weekend</a>
                 <a (click)="clearAllCheckedHours()" class="w-100 cool-button red">Clear all</a>
