--- a/webapp/front/front/src/app/features/admin/admin-create-event/admin-create-event.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-create-event/admin-create-event.component.html
@@ -40,7 +40,7 @@
 
                 <!-- Start Time and End Time -->
                 <div class="f-r-sb-c">
-                    <div class="col-6 pl-0">
+                    <div class="col-6 ps-0">
                         <label for="startTime" class="mb-1">Start Time</label>
                         <input id="startTime" type="time" class="cool-input" formControlName="startTime" />
                     </div>
