--- a/webapp/front/front/src/app/features/marketplace/marketplace-product-requests-page/marketplace-product-requests-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-product-requests-page/marketplace-product-requests-page.component.html
@@ -12,7 +12,7 @@
             </div>
 
             <!-- Center Column -->
-            <div id="center-grid" class="column-center pl-3">
+            <div id="center-grid" class="column-center ps-3">
                 <!-- Upper Marketplace Buttons Component -->
                 <app-marketplace-control-bar [channel]="channel"></app-marketplace-control-bar>
 
@@ -36,7 +36,7 @@
                             <span class="price font-size-20 font-weight-normal">
                                 $ {{ integerPart }}
                             </span>
-                            <div class="f-c-s-c pl-1" style="height: 20px">
+                            <div class="f-c-s-c ps-1" style="height: 20px">
                                 <span class="cents c-light-text font-size-12 font-weight-normal">
                                     {{ decimalPart }}
                                 </span>
