--- a/webapp/front/front/src/app/features/calendar/calendar-event-page/calendar-event-page.component.html
+++ b/webapp/front/front/src/app/features/calendar/calendar-event-page/calendar-event-page.component.html
@@ -27,7 +27,7 @@
 
                                     <div class="f-c-s-s g-05">
                                         <span class="font-size-16 font-weight-normal">
-                                            {{ formattedDate }}:
+                                            {{ event?.eventDate }}:
                                         </span>
                                         <span class="font-size-16 font-weight-bolder c-text">
                                             From {{ event?.startTime }} to {{ event?.endTime }}
