--- a/webapp/front/front/src/assets/styles/landingPage.css
+++ b/webapp/front/front/src/assets/styles/landingPage.css
@@ -1,4 +1,3 @@
-
 .landing-body {
   margin: 0;
   padding: 0;
@@ -87,18 +86,20 @@
   box-shadow: 0 0 0 0 var(--primary);
   position: relative;
   transform: translateY(0);
-  &::before{
+
+  &::before {
     content: "";
     position: absolute;
     width: 100%;
     height: 110%;
     bottom: -4px;
     left: 0;
-    -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
-    -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
-    transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    -webkit-transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
+    -o-transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
+    transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
     pointer-events: none;
   }
+
   &:hover,
   &:active,
   &:focus {
@@ -128,6 +129,7 @@
 
 input.ng-invalid.ng-touched {
   border: 1px solid var(--error);
+
   &:active,
   &:hover,
   &:focus-visible {
@@ -136,7 +138,7 @@ input.ng-invalid.ng-touched {
   }
 }
 
-.form-error{
+.form-error {
   margin-left: 5px;
   width: 100%;
   display: flex;
@@ -147,11 +149,13 @@ input.ng-invalid.ng-touched {
   color: var(--error);
   font-size: 12px;
   margin-top: 5px;
-  &.centered{
+
+  &.centered {
     justify-content: center;
     margin: 0;
   }
 }
+
 input[type="text"],
 input[type="number"],
 .input {
@@ -161,25 +165,27 @@ input[type="number"],
   border: 1px solid var(--primary);
   background-color: var(--background);
   font-size: 15px;
-  font-weight: 600;
+  font-weight: normal;
   color: var(--text);
   padding: 5px 10px;
   outline: none;
   transition: all 0.3s ease-in-out;
   position: relative;
   transform: translateY(0);
-  &::before{
+
+  &::before {
     content: "";
     position: absolute;
     width: 100%;
     height: 110%;
     bottom: -4px;
     left: 0;
-    -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
-    -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
-    transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    -webkit-transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
+    -o-transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
+    transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
     pointer-events: none;
   }
+
   &::placeholder {
     color: var(--lighttext);
     opacity: 0.8;
@@ -263,18 +269,20 @@ input[type="number"],
   transition: all 0.3s ease-in-out;
   position: relative;
   transform: translateY(0);
-  &::before{
+
+  &::before {
     content: "";
     position: absolute;
     width: 100%;
     height: 110%;
     bottom: -4px;
     left: 0;
-    -webkit-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
-    -o-transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
-    transition: bottom .3s cubic-bezier(.5,2.5,.7,.7);
+    -webkit-transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
+    -o-transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
+    transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
     pointer-events: none;
   }
+
   &::placeholder {
     color: var(--lighttext);
     opacity: 0.8;
@@ -282,12 +290,21 @@ input[type="number"],
 
   &:active,
   &:hover,
-  &:focus-visible
-  &:focus,
+  &:focus-visible &:focus,
   &:focus-visible {
     transform: translateY(-4px);
     box-shadow: 4px 4px var(--primary);
   }
+}
+
+.placeholder-option {
+  color: var(--lighttext);
+  opacity: 0.8;
+}
+
+.cool-select:invalid {
+  color: var(--lighttext);
+  opacity: 0.8;
 }
 
 
@@ -295,5 +312,3 @@ input[type="number"],
   color: var(--error);
   font-size: 14px;
 }
-
-
